--- a/RecipeCosts/RecipeCosts/RecipeCosts/RecipeCosts.csproj
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/RecipeCosts.csproj
@@ -14,9 +14,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\ApiKeys.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\ApiKeys.json" />
   </ItemGroup>
 
   <ItemGroup>
