--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 RecipeCosts/RecipeCosts/RecipeCosts.Android/Assets/ApiKeys.json
+RecipeCosts/RecipeCosts/RecipeCosts/Models/Keys/ApiKeys.cs
