--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 .ionide/
 RecipeCosts/RecipeCosts/RecipeCosts.Android/Assets/ApiKeys.json
 RecipeCosts/RecipeCosts/RecipeCosts/Models/Keys/ApiKeys.cs
+RecipeCosts/RecipeCosts/RecipeCosts/recipecosts-service.json
