--- a/RecipeCosts/RecipeCosts/RecipeCosts.Android/RecipeCosts.Android.csproj
+++ b/RecipeCosts/RecipeCosts/RecipeCosts.Android/RecipeCosts.Android.csproj
@@ -98,5 +98,8 @@
       <Name>RecipeCosts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\android_passed_out.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
