Populated RecipeDetailViewModel with basic logic. Added Popup skeleton to select ingredients to add.

--- a/RecipeCosts/RecipeCosts/RecipeCosts/RecipeCosts.csproj
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/RecipeCosts.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="Views\IngredientsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Popups\SelectIngredientPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RecipeDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
